// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`settings in expyrico snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#FAFAF8",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#FAFAF8",
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "gap": 16,
              "padding": 24,
              "paddingBottom": 110,
            },
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <Text
            style={
              {
                "color": "#2C2C28",
                "fontSize": 20,
                "fontWeight": "500",
              }
            }
          >
            Settings
          </Text>
          <View
            style={
              {
                "gap": 10,
              }
            }
          >
            <View
              accessibilityLabel="Invite friends"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "#FAFAF8",
                    "borderColor": "#F0F0ED",
                    "borderRadius": 22,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-invite"
            >
              <Text
                style={
                  {
                    "color": "#2C2C28",
                    "fontSize": 16,
                    "fontWeight": "500",
                  }
                }
              >
                Invite friends
              </Text>
              <Text
                style={
                  {
                    "color": "#8C8C85",
                    "fontSize": 12,
                  }
                }
              >
                Share your invite code
              </Text>
            </View>
            <View
              accessibilityLabel="Theme"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "#FAFAF8",
                    "borderColor": "#F0F0ED",
                    "borderRadius": 22,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-theme"
            >
              <Text
                style={
                  {
                    "color": "#2C2C28",
                    "fontSize": 16,
                    "fontWeight": "500",
                  }
                }
              >
                Theme
              </Text>
              <Text
                style={
                  {
                    "color": "#8C8C85",
                    "fontSize": 12,
                  }
                }
              >
                Pick one of four looks
              </Text>
            </View>
            <View
              accessibilityLabel="Notifications"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "#FAFAF8",
                    "borderColor": "#F0F0ED",
                    "borderRadius": 22,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-notifications"
            >
              <Text
                style={
                  {
                    "color": "#2C2C28",
                    "fontSize": 16,
                    "fontWeight": "500",
                  }
                }
              >
                Notifications
              </Text>
              <Text
                style={
                  {
                    "color": "#8C8C85",
                    "fontSize": 12,
                  }
                }
              >
                Expiry reminders and alerts
              </Text>
            </View>
            <View
              accessibilityLabel="Account"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "#FAFAF8",
                    "borderColor": "#F0F0ED",
                    "borderRadius": 22,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-account"
            >
              <Text
                style={
                  {
                    "color": "#2C2C28",
                    "fontSize": 16,
                    "fontWeight": "500",
                  }
                }
              >
                Account
              </Text>
              <Text
                style={
                  {
                    "color": "#8C8C85",
                    "fontSize": 12,
                  }
                }
              >
                Email, password, and passkeys
              </Text>
            </View>
            <View
              accessibilityLabel="Add a passkey"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "#FAFAF8",
                    "borderColor": "#F0F0ED",
                    "borderRadius": 22,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-add-passkey"
            >
              <Text
                style={
                  {
                    "color": "#2C2C28",
                    "fontSize": 16,
                    "fontWeight": "500",
                  }
                }
              >
                Add a passkey
              </Text>
              <Text
                style={
                  {
                    "color": "#8C8C85",
                    "fontSize": 12,
                  }
                }
              >
                Sign in with Face ID / Touch ID
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`settings in expyricoDark snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#111512",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#111512",
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "gap": 16,
              "padding": 24,
              "paddingBottom": 110,
            },
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <Text
            style={
              {
                "color": "#FAFAF8",
                "fontSize": 20,
                "fontWeight": "500",
              }
            }
          >
            Settings
          </Text>
          <View
            style={
              {
                "gap": 10,
              }
            }
          >
            <View
              accessibilityLabel="Invite friends"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "#191F1B",
                    "borderColor": "#2D3A34",
                    "borderRadius": 22,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-invite"
            >
              <Text
                style={
                  {
                    "color": "#FAFAF8",
                    "fontSize": 16,
                    "fontWeight": "500",
                  }
                }
              >
                Invite friends
              </Text>
              <Text
                style={
                  {
                    "color": "#B7BDB7",
                    "fontSize": 12,
                  }
                }
              >
                Share your invite code
              </Text>
            </View>
            <View
              accessibilityLabel="Theme"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "#191F1B",
                    "borderColor": "#2D3A34",
                    "borderRadius": 22,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-theme"
            >
              <Text
                style={
                  {
                    "color": "#FAFAF8",
                    "fontSize": 16,
                    "fontWeight": "500",
                  }
                }
              >
                Theme
              </Text>
              <Text
                style={
                  {
                    "color": "#B7BDB7",
                    "fontSize": 12,
                  }
                }
              >
                Pick one of four looks
              </Text>
            </View>
            <View
              accessibilityLabel="Notifications"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "#191F1B",
                    "borderColor": "#2D3A34",
                    "borderRadius": 22,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-notifications"
            >
              <Text
                style={
                  {
                    "color": "#FAFAF8",
                    "fontSize": 16,
                    "fontWeight": "500",
                  }
                }
              >
                Notifications
              </Text>
              <Text
                style={
                  {
                    "color": "#B7BDB7",
                    "fontSize": 12,
                  }
                }
              >
                Expiry reminders and alerts
              </Text>
            </View>
            <View
              accessibilityLabel="Account"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "#191F1B",
                    "borderColor": "#2D3A34",
                    "borderRadius": 22,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-account"
            >
              <Text
                style={
                  {
                    "color": "#FAFAF8",
                    "fontSize": 16,
                    "fontWeight": "500",
                  }
                }
              >
                Account
              </Text>
              <Text
                style={
                  {
                    "color": "#B7BDB7",
                    "fontSize": 12,
                  }
                }
              >
                Email, password, and passkeys
              </Text>
            </View>
            <View
              accessibilityLabel="Add a passkey"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "borderWidth": 1,
                    "gap": 4,
                    "padding": 16,
                  },
                  {
                    "backgroundColor": "#191F1B",
                    "borderColor": "#2D3A34",
                    "borderRadius": 22,
                    "opacity": 1,
                  },
                ]
              }
              testID="settings-row-add-passkey"
            >
              <Text
                style={
                  {
                    "color": "#FAFAF8",
                    "fontSize": 16,
                    "fontWeight": "500",
                  }
                }
              >
                Add a passkey
              </Text>
              <Text
                style={
                  {
                    "color": "#B7BDB7",
                    "fontSize": 12,
                  }
                }
              >
                Sign in with Face ID / Touch ID
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>
</View>
`;
